@@ -1,6 +1,6 @@
 dnl -*- autoconf -*- script for new-clx
 dnl Gilbert Baumann, 1999-10-11
-dnl Sam Steingold 2002-2005
+dnl Sam Steingold 2002-2006
 
 AC_PREREQ(2.57)
 AC_INIT(clx/new-clx, 1.0, clisp-list)
@@ -10,8 +10,8 @@ AC_CONFIG_HEADERS(config.h)
 AC_MSG_NOTICE([ * NEW CLX])
 AC_HEADER_TIME
 AC_CHECK_HEADERS([sys/socket.h netdb.h netinet/in.h])
-dnl find a path to X11 - set X_LIBS and X_INCLUDES
-CL_FIND_X
+dnl find a path to X11 - set X_LIBS and X_CFLAGS
+AC_PATH_XTRA
 
 if test "$have_x" != "yes"; then
   AC_MSG_FAILURE([cannot find X Window System])
@@ -20,8 +20,8 @@ fi
 AC_CACHE_CHECK(for XGetAtomNames, gb_cv_have_XGetAtomNames,
   [ gb_LIBS_save=$LIBS
     gb_CFLAGS_save=$CFLAGS
-    LIBS="$X_LIBS $LIBS"
-    CFLAGS="$CFLAGS $X_INCLUDES"
+    LIBS="$X_LIBS $X_PRE_LIBS -lX11 $LIBS"
+    CFLAGS="$CFLAGS $X_CFLAGS"
     AC_TRY_LINK([#include <X11/Xlib.h>],[XGetAtomNames(0,0,0,0);],
       gb_cv_have_XGetAtomNames=yes,
       gb_cv_have_XGetAtomNames=no)
@@ -32,8 +32,8 @@ dnl Look for Xpm
 AC_CACHE_CHECK(for Xpm library, gb_cv_have_xpm,
   [ gb_LIBS_save=$LIBS
     gb_CFLAGS_save=$CFLAGS
-    LIBS="$X_LIBS -lXpm $LIBS"
-    CFLAGS="$CFLAGS $X_INCLUDES"
+    LIBS="$X_LIBS -lXpm $X_PRE_LIBS -lX11 $LIBS"
+    CFLAGS="$CFLAGS $X_CFLAGS"
     AC_TRY_LINK([#include <X11/xpm.h>],
 		[XpmReadFileToPixmap(0,0,0,0,0,0);],
       gb_cv_have_xpm=yes,
@@ -45,8 +45,8 @@ dnl Same thing with XShape
 AC_CACHE_CHECK(for X shape extension, gb_cv_have_xshape,
   [ gb_LIBS_save=$LIBS
     gb_CFLAGS_save=$CFLAGS
-    LIBS="$X_LIBS -lXext $LIBS"
-    CFLAGS="$CFLAGS $X_INCLUDES"
+    LIBS="$X_LIBS -lXext $X_PRE_LIBS -lX11 $LIBS"
+    CFLAGS="$CFLAGS $X_CFLAGS"
     AC_TRY_LINK([#include <X11/Xlib.h>
 	         #include <X11/Xutil.h>
 	         #include <X11/extensions/shape.h>],
