@@ -2,7 +2,7 @@ make clisp-module \
   CC="${CC}" CPPFLAGS="${CPPFLAGS}" CFLAGS="${CFLAGS}" \
   INCLUDES="$absolute_linkkitdir"
 NEW_FILES="clx.o"
-NEW_LIBS="${NEW_FILES} @X_LIBS@"
+NEW_LIBS="${NEW_FILES} @X_LIBS@ @X_PRE_LIBS@ -lX11"
 NEW_MODULES="clx"
 TO_PRELOAD='clx-preload.lisp'
 TO_LOAD='clx image resource'
